// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Actions addActionToCardManifest : Add the actions to card manifest for OData V2 Card 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "Copy_ac",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "triggerActionText": "OK",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "footerActionParameters": {
          "C_SalesPlanTPRelease": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${Copy_ac}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPRelease}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Release",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions addActionToCardManifest : Add the actions to card manifest for OData V2 Card to generate correct action parameters 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "PerformRenewal": {
            "actionParameters": [
              {
                "configuration": {
                  "entitySet": "ContractTermRenewalDecision",
                  "serviceUrl": "/sap/opu/odata/sap/UI_RECONTRACTTERM/ContractTermRenewalDecision?$select=REContractRenewalDecision,REContractRenewalDecision_Text",
                  "title": "\${REContractRenewalDecision}",
                  "value": "\${REContractRenewalDecision_Text}",
                },
                "errorMessage": "Enter the required input",
                "id": "REContractRenewalDecision",
                "isRequired": true,
                "label": "Approved/Rejected",
                "placeholder": "Select an option",
              },
              {
                "errorMessage": "Enter the required input",
                "id": "REContractRenewalDecisionDate",
                "isRequired": true,
                "label": "Decided On",
                "placeholder": "",
              },
              {
                "errorMessage": "",
                "id": "REContractRenewalIsActive",
                "isRequired": false,
                "label": "Renewal Active",
                "placeholder": "",
              },
            ],
            "data": {
              "actionParams": {
                "keys": [
                  "InternalRealEstateNumber",
                  "RERenewalSequenceNumber",
                  "DraftUUID",
                  "IsActiveEntity",
                  "REContractRenewalDecision",
                  "REContractRenewalDecisionDate",
                  "REContractRenewalIsActive",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "PerformRenewal_ac",
            "label": "Perform Renewal",
            "parameters": {
              "DraftUUID": "00000000-0000-0000-0000-000000000000",
              "InternalRealEstateNumber": "IS00100RAPCC6",
              "IsActiveEntity": true,
              "REContractRenewalDecision": "A",
              "REContractRenewalDecisionDate": "2023-04-10T00:00:00.000Z",
              "REContractRenewalIsActive": true,
              "RERenewalSequenceNumber": "1",
            },
            "style": "default",
            "triggerActionText": "OK",
            "verb": "PerformRenewal",
          },
        },
        "footerActionParameters": {
          "PerformRenewal": {
            "DraftUUID": "00000000-0000-0000-0000-000000000000",
            "InternalRealEstateNumber": "IS00100RAPCC6",
            "IsActiveEntity": true,
            "REContractRenewalDecision": "A",
            "REContractRenewalDecisionDate": "2023-04-10T00:00:00.000Z",
            "REContractRenewalIsActive": true,
            "RERenewalSequenceNumber": "1",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${PerformRenewal_ac}",
              "parameters": "{{parameters.footerActionParameters.PerformRenewal}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Perform Renewal",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions addActionToCardManifest : Add the actions to card manifest for OData V4 Card with bound action with Multiple action parameters 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "com.sap.gateway.srvd.ui_lo_setman_cc_setdates.v0001.AddToNewWorklist(com.sap.gateway.srvd.ui_lo_setman_cc_setdates.v0001.CndnContrSettlementCalendarType)": {
            "actionParameters": [
              {
                "errorMessage": "Enter the required input",
                "id": "SettlmtMgmtSchedgWlRunCat",
                "isRequired": true,
                "label": "Set Management Schedule Time",
                "placeholder": "",
              },
              {
                "errorMessage": "Enter the required input",
                "id": "StlMnScdWlIsSchedldImmediately",
                "isRequired": true,
                "label": "StlMnScdWlIsSchedldImmediately",
                "placeholder": "",
              },
              {
                "errorMessage": "",
                "id": "ApplJobPlannedStartDateTime",
                "isRequired": false,
                "label": "Job Execution Date and Time",
                "placeholder": "",
              },
            ],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "__OperationControl/SettlmtMgmtSchedgWlRunCat",
            "label": "Add Date to New Worklist",
            "style": "destructive",
            "triggerActionText": "OK",
            "verb": "com.sap.gateway.srvd.ui_lo_setman_cc_setdates.v0001.AddToNewWorklist",
          },
        },
        "footerActionParameters": {
          "com.sap.gateway.srvd.ui_lo_setman_cc_setdates.v0001.AddToNewWorklist(com.sap.gateway.srvd.ui_lo_setman_cc_setdates.v0001.CndnContrSettlementCalendarType)": {},
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${__OperationControl/SettlmtMgmtSchedgWlRunCat}",
              "parameters": "{{parameters.footerActionParameters.com.sap.gateway.srvd.ui_lo_setman_cc_setdates.v0001.AddToNewWorklist(com.sap.gateway.srvd.ui_lo_setman_cc_setdates.v0001.CndnContrSettlementCalendarType)}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Add Date to New Worklist",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions addActionToCardManifest : Add the actions to card manifest for OData V4 Card with bound action with action parameters 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.SetBillingBlock(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)": {
            "actionParameters": [
              {
                "configuration": {
                  "entitySet": "I_BillingBlockReason",
                  "serviceUrl": "/sap/opu/odata4/sap/c_salesordermanage_srv/srvd_f4/sap/i_billingblockreason/0001;ps=%27srvd-c_salesordermanage_sd-0001%27;va=%27com.sap.gateway.srvd.c_salesordermanage_sd.v0001.ae-c_salesordermanage.setbillingblock.headerbillingblockreason.SalesOrderManageType%27/I_BillingBlockReason?$select=BillingBlockReason,BillingBlockReason_Text&skip=0&$top=20",
                  "title": "\${BillingBlockReason}",
                  "value": "\${BillingBlockReason_Text} (\${BillingBlockReason})",
                },
                "errorMessage": "Enter the required input",
                "id": "HeaderBillingBlockReason",
                "isRequired": true,
                "label": "Billing Block",
                "placeholder": "Select an option",
              },
            ],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "__OperationControl/SetBillingBlock",
            "label": "Set Billing Block",
            "style": "default",
            "triggerActionText": "OK",
            "verb": "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.SetBillingBlock",
          },
        },
        "footerActionParameters": {
          "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.SetBillingBlock(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)": {},
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${__OperationControl/SetBillingBlock}",
              "parameters": "{{parameters.footerActionParameters.com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.SetBillingBlock(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Set Billing Block",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions addActionToCardManifest : Add the actions to card manifest for OData V4 Card with bound action without action parameters 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.WithdrawFromApproval(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)": {
            "actionParameters": [],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "",
            "label": "Withdraw Approval Request",
            "style": "default",
            "triggerActionText": "OK",
            "verb": "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.WithdrawFromApproval",
          },
        },
        "footerActionParameters": {
          "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.WithdrawFromApproval(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)": {},
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "true",
              "parameters": "{{parameters.footerActionParameters.com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.WithdrawFromApproval(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Withdraw Approval Request",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions addActionToCardManifest : Add the actions to card manifest for OData V4 Card with unbound action with parameters 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "com.c_salesordermanage_sd.EntityContainer/UnboundAction": {
            "actionParameters": [
              {
                "errorMessage": "",
                "id": "MessageText",
                "isRequired": false,
                "label": "Enter Message Text",
                "placeholder": "",
              },
            ],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "",
            "label": "Negative (Dummy)",
            "style": "destructive",
            "triggerActionText": "OK",
            "verb": "com.c_salesordermanage_sd.EntityContainer/UnboundAction",
          },
        },
        "footerActionParameters": {
          "com.c_salesordermanage_sd.EntityContainer/UnboundAction": {},
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "true",
              "parameters": "{{parameters.footerActionParameters.com.c_salesordermanage_sd.EntityContainer/UnboundAction}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Negative (Dummy)",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions addActionToCardManifest : Add the actions to card manifest for OData V4 Card with unbound action without parameters 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "com.c_salesordermanage_sd.EntityContainer/OverloadedAction": {
            "actionParameters": [],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "",
            "label": "Overloaded Action - Unbound",
            "style": "default",
            "triggerActionText": "OK",
            "verb": "OverloadedAction",
          },
        },
        "footerActionParameters": {
          "com.c_salesordermanage_sd.EntityContainer/OverloadedAction": {},
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "true",
              "parameters": "{{parameters.footerActionParameters.com.c_salesordermanage_sd.EntityContainer/OverloadedAction}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Overloaded Action - Unbound",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions getActionStyles : get the Action styles for the card action 1`] = `
[
  {
    "label": "Default",
    "labelWithValue": "Default",
    "name": "Default",
  },
  {
    "label": "Positive",
    "labelWithValue": "Positive",
    "name": "Positive",
  },
  {
    "label": "Negative",
    "labelWithValue": "Negative",
    "name": "Negative",
  },
]
`;

exports[`Card Actions getCardActionInfo: Test the Generation of the Card Action information for CardGenerator Model when there does not exist actions for entityType 1`] = `
{
  "actionExists": false,
  "addedActions": [],
  "annotationActions": [],
  "bODataV4": false,
  "isAddActionEnabled": true,
  "styles": [
    {
      "label": "Default",
      "labelWithValue": "Default",
      "name": "Default",
    },
    {
      "label": "Positive",
      "labelWithValue": "Positive",
      "name": "Positive",
    },
    {
      "label": "Negative",
      "labelWithValue": "Negative",
      "name": "Negative",
    },
  ],
}
`;

exports[`Card Actions getCardActionInfo: Test the Generation of the Card Action information for CardGenerator Model when there exists actions for entityType 1`] = `
{
  "actionExists": true,
  "addedActions": [
    {
      "enablePathKey": "__OperationControl/SetBillingBlock",
      "isConfirmationRequired": false,
      "isStyleControlEnabled": true,
      "style": "Default",
      "title": "{{CardGenerator_AdaptiveCardActions_0_Label}}",
      "titleKey": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
      "triggerActionText": undefined,
    },
    {
      "enablePathKey": "__OperationControl/SetDeliveryBlock",
      "isConfirmationRequired": false,
      "isStyleControlEnabled": true,
      "style": "Default",
      "title": "{{CardGenerator_AdaptiveCardActions_1_Label}}",
      "titleKey": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetDeliveryBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
      "triggerActionText": undefined,
    },
  ],
  "annotationActions": [
    {
      "action": "C_SalesPlanTPCopy",
      "enablePath": "Copy_ac",
      "isConfirmationRequired": false,
      "label": "Copy to New Version",
    },
    {
      "action": "C_SalesPlanTPRelease",
      "enablePath": "Copy_ac",
      "isConfirmationRequired": false,
      "label": "Release",
    },
    {
      "action": "C_SalesPlanTPReopen",
      "enablePath": "Copy_ac",
      "isConfirmationRequired": false,
      "label": "Reopen",
    },
    {
      "action": "C_SalesPlanTPReopen",
      "enablePath": "Copy_ac",
      "isConfirmationRequired": false,
      "label": "Reopen with Hidden Path",
    },
    {
      "action": "C_SalesPlanTPReopen",
      "enablePath": "Copy_ac",
      "isConfirmationRequired": false,
      "label": "Reopen with Hidden Path Bool true",
    },
    {
      "action": "C_SalesPlanTPReopen",
      "enablePath": "Copy_ac",
      "isConfirmationRequired": false,
      "label": "Reopen with Determining annotation value Bool true",
    },
    {
      "action": "C_SalesPlanTPReopen",
      "enablePath": "Copy_ac",
      "isConfirmationRequired": false,
      "label": "Reopen with IsCopyAction annotation value Bool true",
    },
  ],
  "bODataV4": false,
  "isAddActionEnabled": true,
  "styles": [
    {
      "label": "Default",
      "labelWithValue": "Default",
      "name": "Default",
    },
    {
      "label": "Positive",
      "labelWithValue": "Positive",
      "name": "Positive",
    },
    {
      "label": "Negative",
      "labelWithValue": "Negative",
      "name": "Negative",
    },
  ],
}
`;

exports[`Card Actions getCardActions: returns the correct action formatted value for Cards with model OData V2 1`] = `
[
  {
    "action": "C_SalesPlanTPCopy",
    "enablePath": "Copy_ac",
    "isConfirmationRequired": false,
    "label": "Copy to New Version",
  },
  {
    "action": "C_SalesPlanTPRelease",
    "enablePath": "Copy_ac",
    "isConfirmationRequired": false,
    "label": "Release",
  },
  {
    "action": "C_SalesPlanTPReopen",
    "enablePath": "Copy_ac",
    "isConfirmationRequired": false,
    "label": "Reopen",
  },
  {
    "action": "C_SalesPlanTPReopen",
    "enablePath": "Copy_ac",
    "isConfirmationRequired": false,
    "label": "Reopen with Hidden Path",
  },
  {
    "action": "C_SalesPlanTPReopen",
    "enablePath": "Copy_ac",
    "isConfirmationRequired": false,
    "label": "Reopen with Hidden Path Bool true",
  },
  {
    "action": "C_SalesPlanTPReopen",
    "enablePath": "Copy_ac",
    "isConfirmationRequired": false,
    "label": "Reopen with Determining annotation value Bool true",
  },
  {
    "action": "C_SalesPlanTPReopen",
    "enablePath": "Copy_ac",
    "isConfirmationRequired": false,
    "label": "Reopen with IsCopyAction annotation value Bool true",
  },
]
`;

exports[`Card Actions getCardActions: returns the correct action formatted value for Cards with model OData V4, app - Manage Credit Memo Requests 1`] = `
[
  {
    "action": "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.ActivateIncompletenessInfo(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)",
    "enablePath": "",
    "isConfirmationRequired": false,
    "label": "Incompleteness Info",
  },
  {
    "action": "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.SetBillingBlock(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)",
    "enablePath": "",
    "isConfirmationRequired": false,
    "label": "Set Billing Block",
  },
  {
    "action": "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.RemoveBillingBlock(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)",
    "enablePath": "",
    "isConfirmationRequired": false,
    "label": "Remove Billing Block",
  },
  {
    "action": "com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.WithdrawFromApproval(com.sap.gateway.srvd.ui_creditmemorequestmanage.v0001.CreditMemoRequestManageType)",
    "enablePath": "",
    "isConfirmationRequired": false,
    "label": "Withdraw Approval Request",
  },
]
`;

exports[`Card Actions getCardActions: returns the correct action formatted value for Cards with model OData V4, app - Manage Sales Order Boolean value Scenario to get the metadata info for oData V4 1`] = `
[
  {
    "action": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
    "enablePath": "false",
    "isConfirmationRequired": true,
    "label": "Set Billing Block",
  },
]
`;

exports[`Card Actions getCardActions: returns the correct action formatted value for Cards with model OData V4, app - Manage Sales Order Path Based Scenario to get the metadata info for oData V4 1`] = `
[
  {
    "action": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
    "enablePath": "_it/__OperationControl/SetBillingBlock",
    "isConfirmationRequired": true,
    "label": "Set Billing Block",
  },
]
`;

exports[`Card Actions getDefaultAction : Get the default action added 1`] = `
[
  {
    "enablePathKey": "",
    "isStyleControlEnabled": false,
    "style": "Default",
    "title": "",
    "titleKey": "",
  },
]
`;

exports[`Card Actions getDefaultAction : Get the default action added when there are saved action in manifest 1`] = `
[
  {
    "enablePathKey": "__OperationControl/SetBillingBlock",
    "isConfirmationRequired": false,
    "isStyleControlEnabled": true,
    "style": "Positive",
    "title": "Set Billing Block",
    "titleKey": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
    "triggerActionText": "OK",
  },
  {
    "enablePathKey": "__OperationControl/SetDeliveryBlock",
    "isConfirmationRequired": false,
    "isStyleControlEnabled": true,
    "style": "Default",
    "title": "Set Delivery Block",
    "titleKey": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetDeliveryBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
    "triggerActionText": "OK",
  },
  {
    "enablePathKey": "__OperationControl/RemoveBillingBlock",
    "isConfirmationRequired": false,
    "isStyleControlEnabled": true,
    "style": "Negative",
    "title": "Remove Billing Block",
    "titleKey": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
    "triggerActionText": "OK",
  },
  {
    "enablePathKey": "__OperationControl/RemoveDeliveryBlock",
    "isConfirmationRequired": false,
    "isStyleControlEnabled": true,
    "style": "Negative",
    "title": "Remove Delivery Block",
    "titleKey": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveDeliveryBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)",
    "triggerActionText": "OK",
  },
]
`;

exports[`Card Actions removeActionFromManifest : Remove the action from card manifest when there exists 1 action in card manifest 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPCopy": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPCopy",
          },
        },
        "footerActionParameters": {
          "C_SalesPlanTPCopy": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${salesorderID}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPCopy}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Release",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions removeActionFromManifest : Remove the action from card manifest when there exists 1 action in card manifest 2`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {},
        "footerActionParameters": {},
      },
    },
  },
}
`;

exports[`Card Actions removeActionFromManifest : Remove the action from card manifest when there exists 1 action in card manifest remove the action which does not exists in manifest 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "footerActionParameters": {
          "C_SalesPlanTPRelease": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${salesorderID}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPRelease}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Release",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions removeActionFromManifest : Remove the action from card manifest when there exists 2 actions in card manifest 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPCopy": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPCopy",
          },
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "footerActionParameters": {
          "C_SalesPlanTPCopy": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
          "C_SalesPlanTPRelease": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${salesorderID}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPCopy}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Copy version",
          "type": "Button",
          "visible": false,
        },
        {
          "actions": [
            {
              "enabled": "\${salesorderID}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPRelease}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Release",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions removeActionFromManifest : Remove the action from card manifest when there exists 2 actions in card manifest 2`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "footerActionParameters": {
          "C_SalesPlanTPRelease": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${salesorderID}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPRelease}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Release",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions removeActionFromManifest : Remove the action from card manifest when there exists 2 actions in card manifest 3`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {},
        "footerActionParameters": {},
      },
    },
  },
}
`;

exports[`Card Actions resetCardActions : Get the action after the action added to manifest have been reset using resetCardActions 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)": {
            "actionParameters": [],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "__OperationControl/RemoveBillingBlock",
            "isEnablePropertyControlVisible": false,
            "label": "Remove Billing Block",
            "style": "destructive",
            "triggerActionText": "OK",
            "verb": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveBillingBlock",
          },
          "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveDeliveryBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)": {
            "actionParameters": [],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "__OperationControl/RemoveDeliveryBlock",
            "isEnablePropertyControlVisible": false,
            "label": "Remove Delivery Block",
            "style": "destructive",
            "triggerActionText": "OK",
            "verb": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveDeliveryBlock",
          },
          "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)": {
            "actionParameters": [
              {
                "id": "HeaderBillingBlockReason",
                "isRequired": true,
                "label": "Billing Block",
              },
            ],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "__OperationControl/SetBillingBlock",
            "isEnablePropertyControlVisible": false,
            "label": "Set Billing Block",
            "style": "positive",
            "triggerActionText": "OK",
            "verb": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetBillingBlock",
          },
          "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetDeliveryBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)": {
            "actionParameters": [
              {
                "id": "DeliveryBlockReason",
                "isRequired": true,
                "label": "Delivery Block",
              },
            ],
            "data": {
              "isConfirmationRequired": false,
            },
            "enablePath": "__OperationControl/SetDeliveryBlock",
            "isEnablePropertyControlVisible": false,
            "label": "Set Delivery Block",
            "style": "default",
            "triggerActionText": "OK",
            "verb": "com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetDeliveryBlock",
          },
        },
      },
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${__OperationControl/SetBillingBlock}",
              "parameters": "{{parameters._adaptiveFooterActionParameters.com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)}}",
              "type": "custom",
            },
            {
              "enabled": "\${__OperationControl/SetDeliveryBlock}",
              "parameters": "{{parameters._adaptiveFooterActionParameters.com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SetDeliveryBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)}}",
              "type": "custom",
            },
            {
              "enabled": "\${__OperationControl/RemoveBillingBlock}",
              "parameters": "{{parameters._adaptiveFooterActionParameters.com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveBillingBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)}}",
              "type": "custom",
            },
            {
              "enabled": "\${__OperationControl/RemoveDeliveryBlock}",
              "parameters": "{{parameters._adaptiveFooterActionParameters.com.sap.gateway.srvd.c_salesordermanage_sd.v0001.RemoveDeliveryBlock(com.sap.gateway.srvd.c_salesordermanage_sd.v0001.SalesOrderManageType)}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Actions",
          "type": "Button",
          "visible": false,
        },
      ],
    },
    "type": "Object",
  },
}
`;

exports[`Card Actions resetCardActions : Get the action after the action added to manifest have been reset using resetCardActions 2`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {},
        "footerActionParameters": {},
      },
    },
    "extension": "module:sap/cards/ap/common/extensions/BaseIntegrationCardExtension",
    "footer": {
      "actionsStrip": [],
    },
    "type": "Object",
  },
}
`;

exports[`Card Actions updateCardManifestAction : Update the style of action from Default to Destructive for Adaptive card and Integration Card Manifest along with enable path 1`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "salesorderID",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "default",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "footerActionParameters": {
          "C_SalesPlanTPRelease": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${salesorderID}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPRelease}}",
              "type": "custom",
            },
          ],
          "buttonType": "Default",
          "text": "Release",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions updateCardManifestAction : Update the style of action from Default to Destructive for Adaptive card and Integration Card Manifest along with enable path 2`] = `
{
  "sap.card": {
    "configuration": {
      "parameters": {
        "_adaptiveFooterActionParameters": {
          "C_SalesPlanTPRelease": {
            "actionParameters": [],
            "data": {
              "actionParams": {
                "keys": [
                  "SalesPlanUUID",
                  "IsActiveEntity",
                ],
              },
              "isConfirmationRequired": false,
            },
            "enablePath": "copy_ac",
            "label": "Release",
            "parameters": {
              "IsActiveEntity": true,
              "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
            },
            "style": "destructive",
            "verb": "C_SalesPlanTPRelease",
          },
        },
        "footerActionParameters": {
          "C_SalesPlanTPRelease": {
            "IsActiveEntity": true,
            "SalesPlanUUID": "00000000-0000-0000-0000-000000000000",
          },
        },
      },
    },
    "footer": {
      "actionsStrip": [
        {
          "actions": [
            {
              "enabled": "\${copy_ac}",
              "parameters": "{{parameters.footerActionParameters.C_SalesPlanTPRelease}}",
              "type": "custom",
            },
          ],
          "buttonType": "Reject",
          "text": "Release",
          "type": "Button",
          "visible": false,
        },
      ],
    },
  },
}
`;

exports[`Card Actions updateModelData : should update the model with value help data 1`] = `
{
  "I_BillingBlockReason": [
    {
      "BillingBlockReason": "00",
      "BillingBlockReason_Text": "Check Day Rate",
    },
    {
      "BillingBlockReason": "01",
      "BillingBlockReason_Text": "Calculation Missing",
    },
    {
      "BillingBlockReason": "02",
      "BillingBlockReason_Text": "Compl Confirm Missng",
    },
  ],
}
`;
